# FGO-py

./: AGENTS.md  pyproject.toml
FGO-py/: fgo.py  fgoCli.py  fgoDetect.py  fgoDevice.py  fgoKernel.py  fgoQuestCatalog.py  fgoReishift.py  fgoTaskQueue.py  fgoWebServer.py  fgoWebServerNew.py
FGO-py/fgoWebUI/: index.html  queue.html
doc/design_logs/: 001-emulator-manager.md  002-maaframework-evaluation.md  003-webui-task-queue.md  004-optional-navigation-nodes.md  005-webui-battle-improvements.md  006-manual-mode.md  007-emu-manager-ui-improvements.md  008-task-types-and-emu-decoupling.md  009-wrapper-task-repeat-group.md  010-launch-game-task.md
doc/design_logs/impl_learnings/: 001-emulator-manager.md  003-webui-task-queue.md  004-ldplayer-input-quest-nav.md  005-webui-battle-improvements.md  006-manual-mode.md  007-emu-manager-ui-improvements.md  008-task-types-and-emu-decoupling.md  009-wrapper-task-repeat-group.md  010-launch-game-task.md
emu/: __init__.py  __main__.py  base.py  ldopengl.py  ldplayer.py  models.py  proxy.py  registry.py  service.py  websocket.py
emu/static/: index.html
tests/: test_ldplayer.py  test_registry.py  test_service.py
