[project]
name = "fgo-py"
version = "21.0.2"
description = "Full-automatic FGO Script"
readme = "readme.md"
requires-python = "==3.11.*"
dependencies = [
    "airtest",
    "tqdm",
    "Flask",
    "pponnxcr",
    "pulp",
    "matplotlib",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "websockets>=11.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
